--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "php": "^8.0",
         "psr/log": "^3.0",
         "guzzlehttp/guzzle": "^7.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "composer/ca-bundle": "^1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^12.0"
